--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <nav class="top-bar" data-topbar="" data-options="is_hover: false">
         <ul class="title-area">
           <!-- Title Area -->
-          <a href="http://brentleewilliams.com/" id="jumpup-intro"><img src="img/bw.png" alt="bw" height="46px" width="46px"></a>
+          <a href="https://brentleewilliams.com/" id="jumpup-intro"><img src="img/bw.png" alt="bw" height="46px" width="46px"></a>
         
         </ul>
 
@@ -59,8 +59,8 @@
         <a href="https://twitter.com/brentlwilliams" target="_blank"><i class="social foundicon-twitter"></i></a>
         <a href="https://linkedin.com/in/brentleewilliams" target="_blank"><i class="social foundicon-linkedin"></i></a>
         <a href="https://github.com/brentleewilliams" target="_blank"><i class="social foundicon-github"></i></a>
-        <a href="http://culturevprocess.com/"><img src="img/Medium.png" class="medium1" height="44px" width="44px"></a>
-        <a href="http://brentleewilliams.com/pgp"><img src="img/Secure-Email.jpg" class="medium1" height="44px" width="44px"></a>
+        <a href="https://culturevprocess.com/"><img src="img/Medium.png" class="medium1" height="44px" width="44px"></a>
+        <a href="https://brentleewilliams.com/pgp"><img src="img/Secure-Email.jpg" class="medium1" height="44px" width="44px"></a>
 
 
         </h4>
