--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="intro">
         <h1>I am a <strike>career strategist</strike> <strike>manager</strike> <strike>educator</strike> people person.</h1>
         <br>
-        <h2>I'm currently producing at <a href="https://cliquestudios.com/clique-university/" target="_blank">Clique Studios</a>.</h2>
+        <h2>I'm currently taking a break from employment, more to come.</h2>
         <br>
         <h4>
         <a href="https://twitter.com/brentlwilliams" target="_blank"><i class="social foundicon-twitter"></i></a>
