--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <a href="https://twitter.com/brentlwilliams" target="_blank"><i class="social foundicon-twitter"></i></a>
         <a href="https://linkedin.com/in/brentleewilliams" target="_blank"><i class="social foundicon-linkedin"></i></a>
         <a href="https://github.com/brentleewilliams" target="_blank"><i class="social foundicon-github"></i></a>
-        <a href="https://culturevprocess.com/" target="_blank"><img src="img/Medium.png" class="medium1" height="44px" width="44px"></a>
-        <a href="https://brentleewilliams.com/pgp" target="_blank"><img src="img/Secure-Email.jpg" class="medium1" height="44px" width="44px"></a>
+        <a href="https://medium.com/@brent.ly" target="_blank"><img src="img/Medium.png" class="medium1" height="44px" width="44px"></a>
+        <a href="mailto:brentleewilliams@gmail.com" target="_blank"><img src="img/Secure-Email.jpg" class="medium1" height="44px" width="44px"></a>
         </h4>
      </section>
     </div>
