--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="row">
     <div class="large-12 columns">
       <section class="intro">
-        <h1>I am a <strike>career strategist</strike> <strike>manager</strike> <strike>educator</strike> people person.</h1>
+        <h1>Product (CSPO), Marketing and People Development. Believer in opportunity for all</h1>
         <br>
         <h2>Currently, product manager at SonderMind.</h2>
         <br>
