--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="//load.sumome.com/" data-sumo-site-id="5d04392bde456590b5148850b1057e00e1017ae4d60ef6cca5e8feff9760a580" async="async"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brent Williams, Person Producer</title>
+    <title>Brent Williams, Product MGR </title>
     <link rel="icon" href="img/bw.png" type="image/x-icon">
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/custom.css">
@@ -51,7 +51,7 @@
   <div class="row">
     <div class="large-12 columns">
       <section class="intro">
-        <h1>Product (CSPO), Marketing and People Development. Believer in opportunity for all</h1>
+        <h1>Believer in opportunity for all</h1>
         <br>
         <h2>Currently, product manager at SonderMind.</h2>
         <br>
